...
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <org.pesmypetcare.mypetcare.activities.views.circularentry.petsinfo.PetsInfoView
                android:id="@+id/mainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </ScrollView>

    </LinearLayout>
...
