...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/white" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
...
                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/flAddPet"
                    style="@style/Widget.MaterialComponents.FloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="16dp"
                    android:src="@drawable/icon_add"
...
