<resources>
    <string name="app_name">My Pet Care</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="repeat_pass">Repeat Password</string>
    <string name="titleDesc">Application Title</string>
    <string name="fieldImage">Image of the current Field</string>
    <string name="differentPasswords">Passwords do not match</string>
    <string name="shortPassword">Password is too short</string>
    <string name="weakPassword">Password is too weak</string>
    <string name="emptyField">This field cannot be empty</string>
    <string name="navigation_my_pets">My Pets</string>
    <string name="navigation_pets_community">Pet\'s community</string>
    <string name="navigation_my_walks">My walks</string>
    <string name="navigation_near_establishments">Near establishments</string>
    <string name="navigation_calendar">Calendar</string>
    <string name="navigation_achievements">Achievements</string>
    <string name="navigation_settings">Settings</string>
    <string name="defaultName">John Doe</string>
    <string name="defaultEmail">johndoe@gmail.com</string>
    <string name="breed_title">Breed</string>
    <string name="birth_date_title">Age(years)</string>
    <string name="gender_title">Gender</string>
    <string name="birth_title">Birth</string>
...
    <string name="medal_planner_description">Write everything on the calendar!</string>
    <string name="google_account_not_detected">
        You need to sign in with Google \nto sync with Google Calendar
    </string>

    <!-- The next two strings cannot be translated into any other language -->
    <string name="navigation_view_open" translatable="false">Open</string>
    <string name="navigation_view_closed" translatable="false">Closed</string>

</resources>

