...
    android:background="@color/colorAccent"
    android:paddingTop="27dp"
    android:paddingStart="20dp"
    tools:ignore="RtlSymmetry">

    <org.pesmypetcare.mypetcare.activities.views.circularentry.CircularImageView
        android:id="@+id/imgUser"
        android:layout_width="75dp"
        android:layout_height="75dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="11dp"
        android:layout_marginStart="20dp">

        <TextView
            android:id="@+id/lblUserName"
            android:text="@string/defaultName"
            style="@style/profileText"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="2dp"/>

        <TextView
            android:id="@+id/lblUserEmail"
            android:text="@string/defaultEmail"
            style="@style/profileEmail"/>

    </LinearLayout>

</LinearLayout>
...
